tests/arch/riscv/error/compiler/test_riscv_error_compiler_014.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	.align 2
    example:	.directive 221